--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
     src: url("../fonts/Raleway-Regular.ttf") format("truetype");
 }
 
+
+
 /* HOME PAGE */
 
 #hamburger-menu:checked ~ nav {
@@ -46,12 +48,29 @@ nav ul a {
 
 .header_image {
     background-image: url("../images/background/homepage4-1.png");
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: fixed;
+    height: 50vh;
+}
+
+.logo_home {
+    display: block;
 }
 
 
 .footer_desktop {
     display: none;
+}
+
+.footer_mobile { 
+    background-color: #259DB7;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.logo_footer {
+    height: 10vh;
+    width: auto;
+    margin: 10px;
 }
